2009-04-29 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/atmel.c: Fix the off by one issue
	  Brad pointed out for blank checking.  Fix a bug in the
	  blank checking for devices with greater than 65k of
	  memory that were not AVR32 based, so that all the
	  memory is checked, not just a portion of the lower bytes.

2009-04-28 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/commands.c: Fix
	  a memory overlap issue between the bootloader & the
	  flash memory available for the new firmware.
	* AUTHORS: Added Brad Schick to the list of contributers.

2009-04-27 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a crash due to larger sized images
	  not being handled properly in a loop.

2009-01-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/dfu.c: Applied the patch from Zachary Clifford
	  to support Windows.
	* AUTHORS: Update the file to reflect Zach's patches.

2009-01-18 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/atmel.h, src/commands.c, src/intel_hex.c,
	  doc/dfu-programmer.1: Applied the patch from Zachary
	  Clifford to support programming user flash on the
	  AVR32 chips and reading flash information from STDIN.
	  Additionally, updated the man page.

2008-12-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, AUTHORS, docs/dfu-programmer.1 NEWS,
	  fedora/dfu-programmer.spec.in, configure.ac: Applied
	  the patch to add support for ignoring data writes that
	  could take place in the bootloader region.

2008-12-03 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, AUTHORS, docs/dfu-programmer.1: Update the
	  project to support all the devices that FLIP supports.
	* NEWS, fedora/dfu-programmer.spec.in, configure.ac:
	  Updated the latest news about the 0.5.0 release

2008-10-31 Weston Schmidt <weston_schmidt@alumni.purdue.edu>